--- a/tickets.html
+++ b/tickets.html
@@ -51,8 +51,46 @@
           </div>
         </div>
     </div>
+      
+      <div class="container my-4">
+        <h2> COMPRA TUS TICKETS </h2>
+        <form class="needs-validation" novalidate>
+          <div class="row">
+            <input type="text" id="nombre" name="nombre" placeholder="Nombre" class="form-control" required>
+            <div class="invalid-feedback">
+              Debe ingresar su nombre
+            </div>
+            <input type="text" id="apellido" name="apellido" placeholder="Apellido" class="form-control" required>
+            <div class="invalid-feedback">
+              Debe ingresar su apellido
+            </div>
+            <input type="number" id="cantidad" name="cantidad" placeholder="Ingrese cantidad de tickets" class="form-control" required onchange="calcularTotal()">
+            </div>
+            <div class="invalid-feedback">
+              Debe ingresar una cantidad de tickets
+            </div>
+            <div class="small">
+              Valor ticket $1000
+            </div>
+            <select id="descuento" onchange="calcularTotal()">
+              <option value="50">Estudiante 50%</option>
+              <option value="30">Orador 30%</option>
+              <option value="10">Particular 10%</option>
+            </select>  
+          </div>
+          <div class="row">
+            <div class="mb-3" style="padding-left: 5%">
+                Total a pagar $: <span id="total" >0</span>
+            </div>
+        </div>
+        <div class="row mb-3">
+            <input type="submit" value="Comprar" class="btn btn-primary">
+        </div>
 
-    <div class="footer">
+        </form>
+      </div>
+
+      <div class="footer">
         <ul class="nav justify-content-center">
           <li class="nav-item">
             <a class="nav-link" href="#">Preguntas frecuentes</a>
@@ -77,7 +115,6 @@
           </li>
         </ul>
       </div>
-
       <script src="script.js"></script>
   </body>
 </html>
